--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <script src="logic.js" defer></script>
 </head>
 <body>
-    <script src="logic.js"></script>
+    <div class="flexbox">
+        <h1>Rock - Paper - Scissors</h1>
+        <div class="container">
+            <div class="rock">
+                <img src="assets/rocks.png" alt="Rock">
+                <button class="rock">Rock</button>
+            </div>
+            <div class="paper">
+                <img src="assets/paper.png" alt="Paper">
+                <button class="paper">Paper</button>
+            </div>
+            <div class="scissors">
+                <img src="assets/scissors.png" alt="Scissors">
+                <button class="scissors">Scissors</button>
+            </div>
+        </div>
+        <h2></h2>
+        <h3></h3>
+    </div>
 </body>
 </html>
